--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "node utils/seeder"
+    "seed": "deno run --compat --unstable --allow-read utils/seeder.ts"
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.21.0",
@@ -42,6 +42,8 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
     "eslint": "^8.2.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.5.2"
