--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.37",
     "eslint": "^8.2.0",
     "eslint-config-next": "11.1.2",
