--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.21.0",
+    "@types/mongoose": "^5.11.97",
     "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
