--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "incremental": true,
     "types": ["node"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "controllers/authControllers.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "controllers/authControllers.js", "controllers/authControllers.js"],
   "exclude": ["node_modules"]
 }
